[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permuted-mnist"
version = "0.1.0"
description = "Permuted MNIST agents, evaluation, and utilities."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = “Ke WANG", email = “wangke08@proton.me" }]

dependencies = [
  "numpy>=1.22",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
plot = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/chezke/Permuted_Mnist"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
